--- a/index.html
+++ b/index.html
@@ -1,12 +1,160 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<head>
+  <meta charset="utf-8" />
+  <title>sedona</title>
+</head>
 
-  </body>
+<body>
+  <header class="page-header">
+    <nav class="navigation">
+      <ul class="navigation-list">
+        <li><img src="#" alt="логотип мал "></li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="index.html">Главная</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">О Седоне</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="catalog.html">Гостиницы</a>
+        </li>
+      </ul>
+      <ul class="navigation-list navigation-user">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">
+              Поиск
+            </span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">
+              Корзина
+            </span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Хочу сюда!</a>
+        </li>
+      </ul>
+    </nav>
+
+  </header>
+  <main class="main-index">
+    <img class="logo" src="" alt="Логотип Sedona">
+    <img src="#" alt="подвал-логотипа">
+    <p>
+    <h1>
+      Седона — небольшой городок в Аризоне,
+      заслуживающий большего!
+    </h1>
+    </p>
+    <p>
+    <h2>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</h2>
+    </p>
+
+    <section class="item">
+      <div class="advantages-item-1">
+        <h3>Настоящий <br> городок</h3>
+        <p>— №1 —</p>
+        <p>Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
+      </div>
+      <div class="advantages-item-2"><img src="" alt="Фон городка-1"></div>
+      <div class="advantages-item-3">
+        <img src="#" alt="лого-домика">
+        <h3>Жильё</h3>
+        <p>Рекомендуем пожить <br> в настоящем мотеле,
+          <br> всё как в кино!
+        </p>
+      </div>
+      <div class="advantages-item-4">
+        <img src="#" alt="лого-бургера">
+        <h3>Еда</h3>
+        <p>Всегда заказывайте
+          <br> топовый фирменный бургер, <br> вы не разочаруетесь!
+        </p>
+      </div>
+      <div class="advantages-item-5">
+        <img src="#" alt="лого-сувениры">
+        <h3>Сувениры</h3>
+        <p>Не только китайского,
+          <br> но и настоящего местного <br> производства!
+        </p>
+      </div>
+      <div class="advantages-item-6"><img src="" alt="Фон гора"></div>
+      <div class="advantages-item-7">
+        <h3>Там есть <br> мост дьявола</h3>
+        <p>— №2 —</p>
+        <p>Да, по нему можно пройти! <br> Если вы осмелитесь, <br> разумеется</p>
+      </div>
+      <div class="advantages-item-8">
+        <h3>Небольшая<br> площадь</h3>
+        <p>— №3 —</p>
+        <p>Все достопримечательности <br> находятся очень близко</p>
+      </div>
+      <div class="advantages-item-9">
+        <h3>Красивая<br> дорога</h3>
+        <p>— №4 —</p>
+        <p>Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
+      </div>
+      <div class="advantages-item-10">
+        <h3>Мало<br> туристов</h3>
+        <p>— №5 —</p>
+        <p>Большинство едет в Гранд <br> Каньон и толпится там</p>
+      </div>
+
+    </section>
+    <section class="interest">
+      <p>
+      <h2>Заинтересовались?</h2>
+      </p>
+      <p>Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне
+      </p>
+      <a class="button button-all" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
+    </section>
+    <section class="subscription">
+      <p>
+      <h2>Подпишитесь на рассылку</h2>
+      </p>
+      <p>Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
+      <form action="">
+        <input type="email" name="email" id="email" placeholder="Ваш e-mail">
+        <button>Подписаться</button>
+      </form>
+    </section>
+  </main>
+  <footer>
+    <section class="footer-social">
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a class="button" href="#">
+            <span class="visually-hidden">В контакте</span>
+          </a>
+        </li>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Телеграмм</span>
+            </a>
+          </li>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="button" href="#">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+          <p>
+          <h3>+7 (812) 812-12-12</h3>
+          </p>
+          <p class="about-text">сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">html academy</a>
+          </p>
+
+    </section>
+  </footer>
+</body>
+
 </html>
