--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 
 <body>
+  <!-- ХЕДЕР -->
   <header class="page-header">
     <nav class="navigation">
       <ul class="navigation-list">
-        <li><img src="#" alt="логотип мал "></li>
+        <li><img src="images/header/logo.png" alt="логотип мал "></li>
         <li class="navigation-item">
-          <a class="navigation-link" href="index.html">Главная</a>
+          <a class="navigation-link" target="_blank" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">О Седоне</a>
@@ -23,17 +24,15 @@
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">
-              Поиск
-            </span>
+          <a class="navigation-link" href="">
+            <span class="visually-hidden"></span>
+            <img src="images/header/search.svg" alt="search">
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">
-              Корзина
-            </span>
+          <a class="navigation-link" href="">
+            <span class="visually-hidden"></span>
+            <img src="images/header/heart.svg" alt="heart">
           </a>
         </li>
         <li class="navigation-item">
@@ -43,9 +42,10 @@
     </nav>
 
   </header>
+  <!-- МЕЙН -->
   <main class="main-index">
-    <img class="logo" src="" alt="Логотип Sedona">
-    <img src="#" alt="подвал-логотипа">
+    <img class="logo" src="images/main/main-base.jpg" alt="Логотип Sedona">
+    <img src="images/main/bottom-main.svg" alt="подвал-логотипа">
     <p>
     <h1>
       Седона — небольшой городок в Аризоне,
@@ -56,35 +56,35 @@
     <h2>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</h2>
     </p>
 
-    <section class="item">
+    <section class="advantages">
       <div class="advantages-item-1">
         <h3>Настоящий <br> городок</h3>
         <p>— №1 —</p>
         <p>Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
       </div>
-      <div class="advantages-item-2"><img src="" alt="Фон городка-1"></div>
+      <div class="advantages-item-2"><img src="images/main/photo-1.jpg" alt="Фон городка-1"></div>
       <div class="advantages-item-3">
-        <img src="#" alt="лого-домика">
+        <img src="images/main/home-icon.svg" alt="лого-домика">
         <h3>Жильё</h3>
         <p>Рекомендуем пожить <br> в настоящем мотеле,
           <br> всё как в кино!
         </p>
       </div>
       <div class="advantages-item-4">
-        <img src="#" alt="лого-бургера">
+        <img src="images/main/meal-icon.svg" alt="лого-бургера">
         <h3>Еда</h3>
         <p>Всегда заказывайте
           <br> топовый фирменный бургер, <br> вы не разочаруетесь!
         </p>
       </div>
       <div class="advantages-item-5">
-        <img src="#" alt="лого-сувениры">
+        <img src="images/main/souvenir-icon.svg" alt="лого-сувениры">
         <h3>Сувениры</h3>
         <p>Не только китайского,
           <br> но и настоящего местного <br> производства!
         </p>
       </div>
-      <div class="advantages-item-6"><img src="" alt="Фон гора"></div>
+      <div class="advantages-item-6"><img src="images/main/photo-2.jpg" alt="Фон гора"></div>
       <div class="advantages-item-7">
         <h3>Там есть <br> мост дьявола</h3>
         <p>— №2 —</p>
@@ -120,46 +120,49 @@
       <h2>Подпишитесь на рассылку</h2>
       </p>
       <p>Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
+      <!-- кнопка -->
       <form action="">
         <input type="email" name="email" id="email" placeholder="Ваш e-mail">
-        <button>Подписаться</button>
+        <button type="submit">Подписаться</button>
+        <img src="images/main/main-footer.jpg" alt="фон низ мейна">
       </form>
     </section>
   </main>
+  <!-- ФУТЕР -->
   <footer>
     <section class="footer-social">
       <ul class="footer-social-list">
         <li class="footer-social-item">
-          <a class="button" href="#">
-            <span class="visually-hidden">В контакте</span>
+          <a class="button" target="_blank" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden"></span>
+            <img src="images/footer/social/social-twitter.svg" alt=" В контакте">
           </a>
         </li>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">Телеграмм</span>
+            <a class="button" target="_blank" href="https:t.me/htmlacademy">
+              <span class="visually-hidden"></span>
+              <img src="images/footer/social/social-facebook.svg" alt="Логотип телеги">
             </a>
           </li>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="button" href="#">
-                <span class="visually-hidden">Ютуб</span>
+              <a class="button" target="_blank" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden"></span>
+                <img src="images/footer/social/social-youtube.svg" alt="Логотип ютуба">
               </a>
             </li>
           </ul>
           <p>
           <h3>+7 (812) 812-12-12</h3>
           </p>
-          <p class="about-text">сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">html academy</a>
+          <p class="about-text"><a class="htmlacademy-link" target="_blank" href="https://htmlacademy.ru/">
+              <img src="images/footer/logo_htmlacademy.png" alt="логотип">
+            </a>
           </p>
 
     </section>
   </footer>
-  <h1></h1>
-  <h3></h3>
-  <h2></h2>
-
-
 </body>
 
 </html>
