--- a/index.html
+++ b/index.html
@@ -47,36 +47,40 @@
       <div class="page-container">
         <div class="main-logo">
           <img class="logo" src="images/main/logo-main.svg" width="458" height="352" alt="Логотип Sedona">
-          <img src="images/main/bottom-main.svg" width="1200" height="57" alt="подвал-логотипа">
+          <img class="small-logo" src="images/main/bottom-main.svg" width="1200" height="57" alt="подвал-логотипа">
         </div>
-        <p class="heading">
-          Седона — небольшой городок в Аризоне,<br>
-          заслуживающий большего!</p>
-        <p class="heading-cause">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <div class="main-container-text">
+          <p class="heading">
+            Седона — небольшой городок в Аризоне,<br>
+            заслуживающий большего!</p>
+          <p class="heading-cause">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        </div>
         <section class="advantages">
           <div class="advantages-item-1">
-            <h3 class="advantages-cause">Настоящий <br> городок</h3>
-            <p>— №1 —</p>
-            <p>Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
+            <div class="real">
+              <h3 class="advantages-cause">Настоящий <br> городок</h3>
+              <p>— №1 —</p>
+              <p>Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
+            </div>
           </div>
-          <div class="advantages-item-2"><img src="images/main/photo-1.jpg" alt="Фон городка-1"></div>
+          <img class="advantages-img" src="images/main/photo-1.jpg" alt="Фон городка-1">
         </section>
         <section class="advantages-citi">
-          <div class="advantages-item-3">
+          <div class="advantages-item-home services">
             <img src="images/main/home-icon.svg" alt="лого-домика">
             <h3 class="advantages-cause">Жильё</h3>
             <p>Рекомендуем пожить <br> в настоящем мотеле,
               <br> всё как в кино!
             </p>
           </div>
-          <div class="advantages-item-4">
+          <div class="advantages-item-4 services">
             <img src="images/main/meal-icon.svg" alt="лого-бургера">
             <h3 class="advantages-cause">Еда</h3>
             <p>Всегда заказывайте
               <br> топовый фирменный бургер, <br> вы не разочаруетесь!
             </p>
           </div>
-          <div class="advantages-item-5">
+          <div class="advantages-item-5 services">
             <img src="images/main/souvenir-icon.svg" alt="лого-сувениры">
             <h3 class="advantages-cause">Сувениры</h3>
             <p>Не только китайского,
@@ -85,7 +89,7 @@
           </div>
         </section>
         <section class="bridge">
-          <div class="advantages-item-6"><img src="images/main/photo-2.jpg" alt="Фон гора"></div>
+          <img src="images/main/photo-2.jpg" alt="Фон гора">
           <div class="advantages-item-7">
             <h3 class="advantages-cause">Там есть <br> мост дьявола</h3>
             <p>— №2 —</p>
@@ -93,17 +97,17 @@
           </div>
         </section>
         <section class="advantages-bridge">
-          <div class="advantages-item-8">
+          <div class="advantages-item-8 sight">
             <h3 class="advantages-cause">Небольшая<br> площадь</h3>
             <p>— №3 —</p>
             <p>Все достопримечательности <br> находятся очень близко</p>
           </div>
-          <div class="advantages-item-9">
+          <div class="advantages-item-9 sight">
             <h3 class="advantages-cause">Красивая<br> дорога</h3>
             <p>— №4 —</p>
             <p>Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
           </div>
-          <div class="advantages-item-10">
+          <div class="advantages-item-10 sight">
             <h3 class="advantages-cause">Мало<br> туристов</h3>
             <p>— №5 —</p>
             <p>Большинство едет в Гранд <br> Каньон и толпится там</p>
@@ -157,7 +161,7 @@
             <a href="tel:" class="contacts_phone">+7 (812) 812-12-12</a>
           </p>
           <p class="about-text"><a class="htmlacademy-link" target="_blank" href="https://htmlacademy.ru/">
-              <img src="images/footer/logo_htmlacademy.png" alt="логотип">
+              <img class="HTML-logo" src="images/footer/logo_htmlacademy.png" alt="логотип">
             </a>
           </p>
 
