--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <header class="page-header">
       <nav class="navigation">
         <ul class="navigation-list">
-          <li><img src="images/header/logo.png" alt="логотип мал "></li>
+          <li><img class="header-logo-small" src="images/header/logo.png" width="139" height="70"
+              alt="логотип сайта Sedona">
+          </li>
           <li class="navigation-item">
-            <a class="navigation-link" target="_blank" href="index.html">Главная</a>
+            <a class="navigation-link navigation-main" target="_blank" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
@@ -27,17 +29,28 @@
           <li class="navigation-item">
             <a class="navigation-link" href="">
               <span class="visually-hidden">Поиск</span>
-              <img src="images/header/search.svg" alt="search">
+              <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="19"
+                viewBox="0 0 19 19" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="m18.16 17.05-3.71-3.7c1-1.3 1.7-3 1.7-4.9 0-4.4-3.6-8-8.02-8a8.12 8.12 0 0 0-8.02 8.1c0 4.4 3.6 8 8.02 8 1.8 0 3.51-.6 4.91-1.7l3.71 3.7 1.4-1.5Zm-10.03-2.5c-3.3 0-6.02-2.7-6.02-6a6.03 6.03 0 0 1 12.04 0c0 3.3-2.71 6-6.02 6Z"
+                  fill="#000" />
+              </svg>
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="">
               <span class="visually-hidden">Корзина</span>
-              <img src="images/header/heart.svg" alt="heart">
+              <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17"
+                viewBox="0 0 19 17" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M9.58 17c-.3 0-.6-.1-.8-.4-5.42-6.1-6.72-7.5-7.03-7.9A5.4 5.4 0 0 1 6.16 0c1.31 0 2.51.5 3.52 1.3a5.47 5.47 0 0 1 9.03 4.1c0 1.3-.5 2.5-1.31 3.4l-7.02 7.9c-.2.2-.4.3-.8.3ZM3.56 7.5c.3.4 3.51 4 6.12 6.9l6.21-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.71 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.71-1.3c-1.8 0-3.31 1.5-3.31 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"
+                  fill="#000" />
+              </svg>
+              <span class="count-badge">12</span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда!</a>
+          <li class="navigation-item-button">
+            <a class="navigation-link button-main" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -127,17 +140,17 @@
           <p class="subscription-text">Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
           <!-- кнопка -->
           <form class="subscription-button" action="">
-            <input type="email" name="email" id="email" placeholder="Ваш e-mail">
+            <input type="email" name="email" id="email" placeholder="Ваш e-mail" class="field">
             <button class="button-submit" type="submit">Подписаться</button>
           </form>
         </section>
       </div>
     </main>
     <!-- ФУТЕР -->
-    <footer>
+    <!-- <footer class="footer">
       <div class="page-footer-container">
         <section class="footer-social">
-          <ul class="footer-social-list">
+          <ul class="footer-social-list footer">
             <li class="footer-social-item">
               <a class="button" target="_blank" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">ВК</span>
@@ -157,17 +170,45 @@
               </a>
             </li>
           </ul>
-          <p class="telephone">
-            <a href="tel:" class="contacts_phone">+7 (812) 812-12-12</a>
-          </p>
-          <p class="about-text"><a class="htmlacademy-link" target="_blank" href="https://htmlacademy.ru/">
-              <img class="HTML-logo" src="images/footer/logo_htmlacademy.png" alt="логотип">
-            </a>
-          </p>
-
         </section>
+        <p class="telephone footer">
+          <a href="tel:" class="contacts_phone">+7 (812) 812-12-12</a>
+        </p>
+        <p class="about-text"><a class="htmlacademy-link" target="_blank" href="https://htmlacademy.ru/">
+            <img class="HTML-logo footer" src="images/footer/logo_htmlacademy.png" alt="логотип">
+          </a>
+        </p>
+
+
+      </div>
+    </footer> -->
+    <footer class="footer">
+      <div class="wrapper">
+        <div class="footer_item">
+          <div class="footer_social">
+            <a class="footer_social_link" target="_blank" href="https://vk.com/htmlacademy">
+              <img src="images/footer/social/social-twitter.svg" width="24px" height="14px" alt="В контакте">
+            </a>
+            <a class="footer_social_link" target="_blank" href="https://t.me/htmlacademy">
+              <img src="images/footer/social/social-facebook.svg" width="18px" height="15px" alt="Логотип телеги">
+            </a>
+            <a class="footer_social_link" target="_blank" href="https://www.youtube.com/user/htmlacademyru">
+              <img src="images/footer/social/social-youtube.svg" width="22px" height="17px" alt="Логотип ютуба">
+            </a>
+          </div>
+        </div>
+        <div class="footer_item">
+          <a class="footer_phone" href="tel:">+7 (812) 812-12-12</a>
+        </div>
+        <div class="footer_item">
+          <a class="footer_logo" target="_blank" href="https://htmlacademy.ru/">
+            <img class="HTML-logo" src="images/footer/logo_htmlacademy.png" width="115px" height="33px"
+              alt="логотип в футере">
+          </a>
+        </div>
       </div>
     </footer>
+
   </body>
 
 </html>
